--- a/3Sum_15.md
+++ b/3Sum_15.md
@@ -1,7 +1,7 @@
 ## Time Limit Exceeded for Brute force Approach
 
 ### Code:
-```java:
+```java []
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
         Set<List<Integer>> res = new HashSet<>();
