--- a/3Sum_15.md
+++ b/3Sum_15.md
@@ -21,3 +21,37 @@ class Solution {
     }
 }
 ```
+
+# Intuition
+ Basic math  
+# Approach
+to findthje third element , subtract the sum of the other two with zero i.e. 0-(arr[i]+arr[j]).
+# Complexity
+- Time complexity:
+$$O(n^2 * log(m))$$
+
+- Space complexity:
+ $$O(n)+ O(log(m))$$
+
+# Code
+```java []
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        Set<List<Integer>> res = new HashSet<>();
+        for (int i = 0; i < nums.length; i++) {
+            Set<Integer> hashset = new HashSet<>();
+            for (int j = i + 1; j < nums.length; j++) {
+                int third_ele = -(nums[i] + nums[j]);
+                if (hashset.contains(third_ele)) {
+                    List<Integer> arr = Arrays.asList(nums[i], nums[j], third_ele);
+                    arr.sort(null);
+                    res.add(arr);
+                }
+                hashset.add(nums[j]);
+            }
+        }
+    List<List<Integer>> ans = new ArrayList<>(res);
+        return ans;
+    }
+}
+```
