--- a/3Sum_15.md
+++ b/3Sum_15.md
@@ -25,7 +25,9 @@ class Solution {
 # Intuition
  Basic math  
 # Approach
-to findthje third element , subtract the sum of the other two with zero i.e. 0-(arr[i]+arr[j]).
+1) To find the third element , subtract the sum of the other two with zero i.e. 0-(arr[i]+arr[j]).
+2) To maintain hashset without repetation in the triplet we add only the element s which are visited by the j loop.
+3) using hashset maintains the uniqueness inthe triplets.
 # Complexity
 - Time complexity:
 $$O(n^2 * log(m))$$
